# VoxelGL

./: .gitignore  CMakeLists.txt  README.md  build  buildD  buildR  count_lines  verts
assets/shaders/: fragment.frag  vertex.vert
include/: block.hpp  camera.hpp  chunk.hpp  chunk_manager.hpp  fps_count.hpp  general.hpp  generation.hpp  input.hpp  log.hpp  random_generator.hpp  shader.hpp  ui.hpp  window.hpp
include/glad/: glad.h
lib/: glad.c
shaders/: fragment.frag  vertex.vert
src/: block.cpp  chunk.cpp  chunk_manager.cpp  fps_count.cpp  input.cpp  log.cpp  main.cpp  shader.cpp  ui.cpp  window.cpp
